feat: Enhance UI and guest experience
Introduces a dark mode theme for a sleeker interface, improves the user experience for guest users by allowing them to log habits without immediate login, and refactors UI components for better consistency. Also includes updates to type definitions and color palettes.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       /* Custom scrollbar for cleaner look */
       ::-webkit-scrollbar { width: 6px; }
       ::-webkit-scrollbar-track { background: transparent; }
-      ::-webkit-scrollbar-thumb { background-color: #d1d5db; border-radius: 20px; }
+      ::-webkit-scrollbar-thumb { background-color: #44403c; border-radius: 20px; }
     </style>
   <script type="importmap">
 {
@@ -26,7 +26,7 @@
 }
 </script>
 </head>
-  <body class="bg-stone-50 text-stone-900 antialiased">
+  <body class="bg-stone-950 text-stone-100 antialiased">
     <div id="root"></div>
   </body>
 </html>
